# wordbin

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
.sqlx/: query-33a3c7160aafc261f3c82f5227be7cab9e892f48b32671bc6894614f3c1e9204.json  query-3afe8d3913ed13e3c955faec65553757b29fcb4f60428928238591e6dd5ff8f3.json  query-404034e9c0cbc95994d3687acb1af194a411314e877d373e587b6363ce298422.json  query-85057bc19c74b799f517e7330ecefd19545370281eb7f0bc52c8d197f38d6a21.json  query-9096dbee8f19dcd04451b475fe6b74bd644dbadc3adc89d310080fbb3cf34171.json  query-fbd119bf795b12f2e637bcd638d64cae786d67a75715aa8432705fa895963d65.json
server/: .env.example  App.toml  Cargo.toml  Dockerfile
server/migrations/: 20260505154849_init.sql  20260517120000_fsrs.sql
server/src/: boot.rs  cli.rs  crypto.rs  error.rs  main.rs  openapi.rs  state.rs
server/src/auth/: mod.rs
server/src/config/: mod.rs
server/src/extract/: auth.rs
server/src/handler/: mod.rs  server.rs  word.rs
server/src/model/: auth.rs  mod.rs
server/src/model/review/: mod.rs
server/src/model/word/: mod.rs  object.rs
server/src/repo/: auth.rs  mod.rs  review.rs  word.rs
wordbin-desktop/: Cargo.toml  build.rs  index.html  styles.css
wordbin-desktop/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  ru.json  zh.json
wordbin-desktop/shared-types/: Cargo.toml
wordbin-desktop/shared-types/src/: lib.rs  secret.rs  setting.rs  settings.rs
wordbin-desktop/src/: app.rs  locale.rs  main.rs
wordbin-desktop/src-tauri/: Cargo.toml  tauri.conf.json
wordbin-desktop/src-tauri/icons/: icon.icns
wordbin-desktop/src-tauri/src/: lib.rs  main.rs
wordbin-desktop/src-tauri/src/command/: secret.rs  settings.rs
wordbin-desktop/src/layout/: app_layout.rs  mod.rs  sidebar.rs
wordbin-desktop/src/page/: home_page.rs  mod.rs  setup_page.rs
wordbin-desktop/src/page/words/: detail_panel.rs  filter_bar.rs  mod.rs  topbar.rs  word_list.rs  words_page.rs
wordbin-desktop/styles/: home.css  setup.css  styles.css
wordbin-extension/: Cargo.toml  Makefile  README.md  Trunk.toml  bootstrap.js  build.rs  index.html  manifest.json  popup.css
wordbin-extension/locales/: de.json  en.json  fr.json  ru.json
wordbin-extension/src/: api.rs  chrome_perms.rs  chrome_tabs.rs  lib.rs  settings.rs
wordbin-extension/src/page/: mod.rs  popup_page.rs  settings_page.rs  words_page.rs
wordbin-proto/: Cargo.toml
wordbin-proto/proto/: wordbin.proto
wordbin-types/: Cargo.toml
wordbin-types/src/: lib.rs  server.rs  word.rs
