[package]
name = "wordbin-server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Dennis S. Dale <dennis.s.dale@icloud.com>"]

[dependencies]
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }

thiserror = "2.0.18"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }

tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }


[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
must_use_candidate = "allow"
unwrap_used = "deny"
panic = "deny"
todo = "warn"
unreachable = "warn"
enum_glob_use = "deny"
explicit_iter_loop = "warn"
redundant_closure_for_method_calls = "warn"
