[package]
name = "wordbin-server"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]

wordbin-types = { path = "../wordbin-types", features = ["utoipa"] }

tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }

async-trait = "0.1.89"
dotenvy = "0.15"
figment = { version = "0.10.19", features = ["toml", "env"] }

anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

time = { version = "0.3.47", features = ["serde", "serde-well-known"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "time", "derive"] }

fsrs = "5.2"

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
uuid = { version = "1", features = ["v4"] }

utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

hex = "0.4"
sha2 = "0.11"

clap = { version = "4.6", features = ["derive"] }

[lints]
workspace = true
