[package]
name = "wordbin-desktop-ui"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

shared-types = { path = "shared-types" }

leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8.13"
leptos_meta = { version = "0.8.6" }
leptos_i18n = "0.6.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"

[build-dependencies]
leptos_i18n_build = "0.6.2"

[lints]
workspace = true

[workspace]
members = ["shared-types","src-tauri"]

[workspace.package]
license = "Apache-2.0"
authors = ["Dennis S. Dale <dennis.s.dale@icloud.com>"]


[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
must_use_candidate = "allow"
unwrap_used = "deny"
panic = "deny"
todo = "warn"
unreachable = "warn"
enum_glob_use = "deny"
explicit_iter_loop = "warn"
redundant_closure_for_method_calls = "warn"
