[package]
name = "wordbin-extension"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Dennis S. Dale <dennis.s.dale@icloud.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
leptos_i18n_build = { version = "0.6.2", features = ["csr"] }

[dependencies]

wordbin-types = { path = "../wordbin-types" }

leptos = { version = "0.8.19", features = ["csr"] }
leptos_i18n = { version = "0.6.2", features = ["csr"] }

console_error_panic_hook = { version = "0.1.7" }

anyhow = "1.0"

reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
js-sys = { version = "0.3.97" }
gloo = { version = "0.12.0", features = ["storage"] }

leptos_icons = "0.7.1"
icondata = { version = "0.7.0", features = ["font-awesome", "lucide"]}
url = "2.5.8"


