[package]
name = "wordbin-extension"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
leptos_i18n_build = { version = "0.6.2", features = ["csr"] }

[dependencies]

wordbin-types = { path = "../wordbin-types" }

leptos = { version = "0.8.19", features = ["csr"] }
leptos_i18n = { version = "0.6.2", features = ["csr"] }

console_error_panic_hook = { version = "0.1.7" }

anyhow = "1.0"

reqwest = { version = "0.13.3", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location", "Document", "Element", "HtmlElement", "DomTokenList"] }
js-sys = { version = "0.3" }
gloo = { version = "0.12", features = ["storage"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"

leptos_icons = "0.7"
icondata = { version = "0.7", features = ["font-awesome", "lucide"]}
url = "2.5"


[lints]
workspace = true